fix spacing

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ section p {
 
 .spacer {
   width: 100%;
-  height: 100px;
+  height: 25px;
   background: var(--blue);
 }
 
